major styling changes. fixed a lot of the bad spacing and bad placement. looks nicer now

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 .Nav {
   background-color: #2E3440 !important;
   width: 100vw !important;
+  float: left !important;
 }
 
 .navCard {
@@ -72,7 +73,7 @@ img {
   width: 35%;
   height: 35%;
   margin-top: 45px;
-  
+  margin-bottom: 5%;
 }
 
 body {
@@ -90,20 +91,16 @@ body {
   background-color: #2E3440 !important;
 }
 
-.container {
-  /* width: 80%; */
-  /* height: 700px; */
+.test {
   margin: auto !important;
-  /* border: 10px solid var(--clr-dark); */
+  margin-top: 15%;
   display: flex;
-  justify-content: space-around;
-  padding: auto !important;
-  ;
+  width: 50% !important;
 }
 
 .item {
-  width: 37%;
-  height: 150px;
+  width: 49%;
+  height: 180px;
   background-color: #4C566A;
   padding: 1.5em;
   font-weight: 700;
@@ -121,19 +118,20 @@ body {
   display:flex;
   flex-direction:column;
   float: right;
-
+  height: 1vh;
   
 }
 .pl{
   margin:auto;
   padding:30px;
-  margin-top: 50px;
-  /* display:flex; */
-  
+  display:flex;
+  justify-content: center;
+  margin-left: 13%;
 }
 .send-button{
   margin-bottom: auto;
   margin-top: 3%;
+  margin-bottom: 15%;
 }
 .chicken-wing{
   margin-left:44%;
@@ -144,8 +142,8 @@ body {
 }
 .genreButton {
   margin: 1% !important;
-  background-color: #a0a3a9 !important;
-  border: #a0a3a9 !important;
+  background-color: #8f1ad4 !important;
+  border: #8f1ad4 !important;
 }
 
 .genreButton:hover {
@@ -160,4 +158,19 @@ background-color: #3B4252 !important;
 
 .remove-button:hover {
   background-color: red !important;
+}
+
+.homeBttn {
+  margin-top: 35px;
+  height: 50px;
+  width: 240px;
+  background-color: #8f1ad4 !important;
+  border: #8f1ad4 !important;
+  font-weight: 800 !important;
+}
+
+.surounding {
+  margin-top: 5%;
+  /* position: fixed; */
+  width: 100%;
 }
